Add basic HTML structure to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>algorithims_code_and_errors</title>
+</head>
+<body>
+  <h1>Index of All Files</h1>
+  <p>Please select a lesson from the list below:</p>
+  <ul>
+    <li><a href="Coding.html">Coding</a></li>
+  </ul>
+</body>
+</html>
