Update link to Coding AL page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Please select a lesson from the list below:</p>
   <ul>
     <li><a href="Coding.html">Coding</a></li>
-    <li><a href="Adjusted_Coding_Lesson.html">Coding AL</a></li>
+    <li><a href="Coding_al.html">Coding AL</a></li>
   </ul>
 </body>
 </html>
